Runtime tool system assert when disabling a collection with an active grease pencil object in draw mode #66356

Closed
opened 2019-07-02 23:39:45 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 2d35fed6f8 (blender2.8 HEAD)
Worked: never.

Short description of error
Assert when disabling a collection with an active grease pencil object in draw mode.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • Delete all objects
  • Add a stroke object to the default collection Collection.
  • Go to Draw mode
  • Disable the Collection
  • Move the mouse around

BLI_assert failed: //source/blender/windowmanager/intern/wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool' assert
Full backtrace: P1023

**Blender Version** Broken: 2d35fed6f846 (blender2.8 HEAD) Worked: never. **Short description of error** Assert when disabling a collection with an active grease pencil object in draw mode. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). * Delete all objects * Add a stroke object to the default collection Collection. * Go to Draw mode * Disable the Collection * Move the mouse around `BLI_assert failed: //source/blender/windowmanager/intern/wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool' assert` Full backtrace: [P1023](https://archive.blender.org/developer/P1023.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2019-07-02 23:40:41 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

@ideasman42 I originally noted this on #66126#706986 but since that bug was fixed (and this one was not), it is reported here now.

@ideasman42 I originally noted this on #66126#706986 but since that bug was fixed (and this one was not), it is reported here now.

This issue was referenced by 31d762c3a8

This issue was referenced by 31d762c3a80da99afa4e3ba6dd308746011de6cb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66356
No description provided.