Fix T66356: runtime assert disabling a collection